# goodtxt

./: .env.example  .gitignore  DEPLOYMENT_NOTES.md  README.md  REVIEW_SUMMARY.md  docker-compose.yml  git_push_commands.txt  quick_deploy.sh  quick_fix_deploy.sh  security_check.py  test_fixes.py  test_report.json  verify_system.sh  workspace.json  完成报告.md
.memory/: todo_meta.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/database/: __init__.py  db_manager.py  init_db.py
backend/examples/: api_examples.py
backend/scripts/: install.sh
backend/src/agents/: agent_factory.py
backend/src/auth/: auth_manager.py
backend/src/config/: settings.py
backend/src/core/: __init__.py  communication_hub.py
backend/src/engine/: novel_generator.py
browser/extracted_content/: extracted_content_20260131_005343.json  goodtxt_registration_page.json
config/nginx/: nginx.conf
docs/: goodtxt_registration_test_report.md
frontend/: Dockerfile  build.sh  nginx.conf
frontend/src/: index.css
frontend/src/components/: Header.tsx  Layout.tsx
frontend/src/pages/: LoginPage.tsx  NovelEditor.tsx  ProjectManager.tsx  Settings.tsx
frontend/src/types/: index.ts
goodtxt/: CORRECT_USAGE_GUIDE.md  LICENSE  MANUAL_INSTALL.md  README.md  backend_troubleshooting.md  docker_reinstall_commands.md  install.bat  install.sh  quick_fix_deploy.sh  server_setup.sh  server_test_commands.md  start.bat  super_launcher.py  test_report.json  代码漏洞检查报告.md  修复完成报告.md  修复报告.md  修复说明.md  前后端功能完善报告.md  快速使用指南.md  最终交付报告.md  服务器配置指令.md  部署指导.md  问题诊断与修复报告.md
goodtxt/backend/: main.py  requirements.txt
goodtxt/backend/database/: init_db.py
goodtxt/backend/docs/: DEPLOYMENT.md
goodtxt/backend/src/: __init__.py
goodtxt/backend/src/ai/: model_client.py
goodtxt/config/: redis.conf
goodtxt/frontend/: index.html  package.json
goodtxt/frontend/src/: App.tsx
goodtxt/scripts/: deploy_check.py  init_database.py
monitoring/: prometheus.yml
scripts/: deploy.sh  init_database.py  setup-database.py
shell_output_save/: requirements.txt_1769785545.txt
user_input_files/: pasted-text-2026-01-30T16-13-02.txt
(+18 files in other folders)
